--- a/app-config.yaml
+++ b/app-config.yaml
@@ -264,9 +264,8 @@ catalog:
   locations:
     # Add a location here to ingest it, for example from a URL:
     #
-    # type: url
-    # target: https://github.com/backstage/backstage/blob/master/packages/catalog-model/examples/all.yaml
-    #      # https://github.com/Navdeep-12/Backstage/blob/main/packages/catalog-model/examples/all.yaml
+    - type: url
+      target: https://github.com/Navdeep-12/Backstage/blob/main/packages/catalog-model/examples/all.yaml
     # For local development you can use a file location instead:
     #
     #     - type: file
@@ -276,11 +275,6 @@ catalog:
     # backend, for example packages/backend/.
 
     # Backstage example entities
-    - type: file
-      target: ./catalog-info.yaml
-
-    - type: file
-      target: ../catalog-model/examples/all.yaml
     # Backstage example groups and users
     - type: file
       target: ../catalog-model/examples/acme-corp.yaml
