--- a/app-config.yaml
+++ b/app-config.yaml
@@ -271,8 +271,16 @@ catalog:
       target: https://github.com/Navdeep-12/Backstage/blob/main/packages/catalog-model/examples/all-systems.yaml
 
     # Groups
-    - type: url
-      target: https://github.com/Navdeep-12/Backstage/blob/main/packages/catalog-model/examples/acme-corp.yaml
+   # - type: url
+   #   target: https://github.com/Navdeep-12/Backstage/blob/main/packages/catalog-model/examples/acme-corp.yaml
+
+    - type: file
+      target: ../catalog-model/examples/acme-corp.yaml
+      rules:
+        - allow: [User, Group]
+
+    - type: file
+      target: ../create-app/templates/default-app/examples/org.yaml
 
     # Resources
     - type: url
