--- a/packages/catalog-model/examples/apis/petstore-webhook-api.yaml
+++ b/packages/catalog-model/examples/apis/petstore-webhook-api.yaml
@@ -16,6 +16,6 @@ metadata:
 spec:
   type: openapi
   lifecycle: experimental
-  owner: team-c
+  owner: SRE-B
   definition:
     $text: ./petstore-webhook.oas.yaml
