--- a/packages/catalog-model/examples/apis/swapi-graphql.yaml
+++ b/packages/catalog-model/examples/apis/swapi-graphql.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   type: graphql
   lifecycle: production
-  owner: team-b
+  owner: SRE-D
   definition: |
     schema {
       query: Root
